[package]
name = "stunxy"
version = "0.2.0"
authors = ["Xie Zhihao <xzh1206@gmail.com>"]
edition = "2018"
description = "Deal with NAT traversal using STUN."
documentation = "https://docs.rs/stunxy"
readme = "README.md"
repository = "https://github.com/zhxie/stunxy"
license = "MIT"
keywords = ["stun"]
categories = ["command-line-utilities", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bytes = "0.5.6"
clap = "2.33.1"
dns-lookup = "1.0.3"
rand = "0.7.3"
socks = "0.3.2"
structopt = "0.3.15"
